--- a/src/assets/locales/en-GB.json
+++ b/src/assets/locales/en-GB.json
@@ -11,21 +11,21 @@
     "footer_agreement": "ගිවිසුම",
     "footer_text": "GenoTechies සාමූහික ප්‍රයත්නයකි.",
     "headline": "අනාගත දත්ත විද්‍යාඥයන් වෙනුවෙන් ගොණුවන පොදු මුලාශ වල දත්ත",
-    "hello": "ආයුබෝවන්",
+    "hello": "Hello",
     "home": "මුල් පිටුව",
     "locations": "ස්ථාන",
     "locations_topic": "ස්ථාන අනුව පසුගිය දින 90 තුළදී අසාදිත රෝගීන් ගණන",
     "map": "සිතියම",
-    "paragraph_1": "අන්තර්ගතයේ වෙනසක් දැන ගැනීමට භාෂා බොත්තම ක්ලික් කරන්න",
+    "paragraph_1": "Click on the Language button to see content change",
     "project_name": "Data එකමුතු CrowdSourced SL",
-    "sample_para": "මෙය සාම්පල ඡේදයකි.",
-    "sample_para2": "මෙය සාම්පල සාම්පල ඡේදයකි",
+    "sample_para": "This is a sample paragraph.",
+    "sample_para2": "This is a Sample paragraph",
     "stay_awhile_and_listen": "මද වේලාවක් රැඳී සිට සවන් දෙන්න",
     "subHeader": "අදාළ මූලාශ්‍රය මත පදනම් වී දත්ත නිරූපණය වැඩිදියුණු කිරීමේ අරමුණ සහිතව අප විසින් ශ්‍රී ලංකාවේ පවතින කෝවිඩ් 19 තත්වයට අදාළ වන දත්ත බිම් මට්ටමින් එකතු කිරීමට උත්සහ කරයි.\n              අපට සහයෝගය දක්වන අතරතුර, දත්ත මත යැපෙන්නාවූ දැනුම උත්පාදනය කිරීම සඳහා ඔබට අවශ්‍ය වන දත්ත අපගෙන් ලබා ගන්න.",
     "test": " අනාගත දත්ත විද්‍යාඥයන් වෙනුවෙන් ගොණුවන පොදු මුලාශ වල දත්ත",
     "timeline": "අවස්ථා පෙළගැස්ම",
     "timeline_topic": "පසුගිය දින 45 තුළදී සිදුවූ අවස්ථා හා සිදුවීම් පෙළගැස්ම(ශ්‍රී ලංකාවේ කෝවිඩ් 19 තත්වය)",
-    "to_read": "සරල ජීවිතයක් ගත කළ මොහොමඩ් අනාගතවක්තෘවරයා “උසස් සිතුවිලි කෙරෙහි මගේ සිත යොමු කරයි” යනුවෙන් පැවසීය. අපේ ජීවිතයේ සරල බව අනුගමනය කිරීමේ අවශ්‍යතාවයක් ඇත. වර්තමානයේ වැඩිවෙමින් පවතින සාර්‍ථක හා වර්‍ගයේ සෑම කෙනෙකුම තම ධනය ප්‍රදර්ශනය කිරීමේ මීයන් තරඟයට සම්බන්ධ වන විට, අපි කිසිදු කෘත්‍රිම බවක් නොමැතිව සරලව ජීවත් වීමට කැමති විය යුතුයි. මහත්මා ගාන්ධිගේ ජීවිතය අපට පෙන්වා දෙන්නේ ජීවිතයේ සරල බව සැමවිටම මනසේ පරිණතභාවය සඳහා අනුබල දෙන බවයි. විවිධ සමාජ ආගමික උත්සව වලදී ධනය නාස්ති කරනවා වෙනුවට අපි විනීත හා අවජාතක නොවිය යුතුයි. ඇත්තෙන්ම හොඳ මිනිසුන් තමන් යහපත් බව පෙන්විය යුතු නැත. එලෙසම, අපේ ජීවන රටාවේ සංකීර්ණතාවයට අමුතුවෙන් ධනය ප්‍රදර්ශනය කිරීම අවශ්‍ය නොවේ, එය අපේ චරිතයෙන් හෝ අප ගෙන යන ආකාරයට පෙනෙනු ඇත. වෙහෙස මහන්සි වී වැඩ කරන සහ මනුෂ්‍යත්වයේ හොඳම සේවකයින් වන මිනිසුන් නිහ liveව අරපිරිමැස්මෙන් ජීවත් වෙති. මිලියන ගණනක් අපේ සගයන් දරිද්‍රතා රේඛාවට පහළින් ජීවත් වන බව දන්නා විට මුදල් නාස්ති කිරීම පාපයක් ලෙස අප සැලකිය යුතුයි. වර්තමානයේ, සෑම දෙයක්ම විකිණීමට ඇති පාරිභෝගික සංස්කෘතිය වැඩි කරන විට, අප තුළ මානව ගුණාංග ආරක්ෂා කර ගැනීමට අවශ්‍ය නම්, අපි සරල ජීවන රටාවකට අනුගත විය යුතුයි.",
+    "to_read": "Simple living said the Prophet Mohammed “sets my heart on higher thoughts.” There is a need to follow simplicity in our life. In today’s world of increasing pomp and show, when everybody is joining the rat race of displaying his wealth, we should prefer to live simply, without any artificiality. Mahatma Gandhi’s life shows us that simplicity in life always encourages maturity of mind. Instead of wasting wealth in various socio-religious ceremonies, we should be decent and undemonstrative. People who are really good need not show that they are good. In the same manner, the sophistication of our life style needs no raw display of wealth, it would rather appear in our character or in the manner we carry ourselves. People, who work hard and are the best servants of humanity, live in a quiet frugal manner. We should consider it a sin to waste money when we are aware of the fact that millions of our compatriots are living below the poverty line. Nowadays, in increasing consumerist culture, where everything is on sale, we should adhere to the simple way of life if we want to preserve human attributes in us.",
     "topic": "Location wise infected patient count for last 90 days"
   }
 }
