--- a/src/assets/locales/ta.json
+++ b/src/assets/locales/ta.json
@@ -1,8 +1,31 @@
 {
   "translation": {
-    "hello": "வணக்கம், என் நண்பர்",
-    "sample_para": "මෙය සාම්පල ඡේදයකි",
-    "sample_para2": "මෙය සාම්පල සාම්පල ඡේදයකි",
-    "stay_awhile_and_listen": "சிறிது நேரம் தங்கியிருந்து கேளுங்கள்"
+    "about_us": "எங்களை பற்றி",
+    "about_us_contact_us_head": "எங்களுடன் ஒத்துழைப்பு",
+    "about_us_google_form": "கூகிள் படிவம்",
+    "about_us_header": "GenoTechies பற்றி",
+    "about_us_sub_header": "நாம் நம்பும் இலங்கை நலன் விரும்பிகளின் ஒரு குழுவாக இருக்கிறோம்\n ஒரு தரவு இயக்கப்படும் அணுகுமுறை பிரச்சினைகள் புரிதல் மேம்படுத்த மற்றும் தீர்வுகளை திறன் அதிகரிக்க முடியும்.\n மேலும், தரவு கொண்ட சிறப்பு டொமைன் பகுதியில் அப்பால் யோசிக்க உதவுகிறது.",
+    "about_us_sub_header2": "சமுதாயத்தின் ஆதரவால் நாம் உயிர் பிழைத்துள்ளோம், சமுதாயத்தின் அறிவு தலைமுறையின் தடைகளை சமாளிக்க ஆதரவு தேவை.\n உங்கள் ஒத்துழைப்பு உங்களுக்கு உதவும்போதே இலங்கையை நமக்கு உதவியாக இருக்கும் என எதிர்பார்க்கிறோம். \n எங்களை தொடர்பு கொள்ளவும். நாங்கள் உங்களுடன் ஒத்துழைக்க காத்திருக்கிறோம்.",
+    "districts": "மாவட்டங்கள்",
+    "districts_topic": "கடந்த 90 நாட்களுக்கு மாவட்ட வாரியாக பாதிக்கப்பட்ட நோயாளி எண்ணிக்கை",
+    "footer_agreement": "ஒப்பந்தம்",
+    "footer_text": "GenoTechies கூட்டு முயற்சி",
+    "headline": "எதிர்கால தரவு விஞ்ஞானி கூட்டம் தயாரிக்கப்படுகிறது தரவு ",
+    "hello": "வணக்கம்!",
+    "home": "முதல் பக்கம்",
+    "locations": "இருப்பிடங்கள்",
+    "locations_topic": "கடந்த 90 நாட்களுக்கு இடம் வாரியாக பாதிக்கப்பட்ட நோயாளி எண்ணிக்கை",
+    "map": "வரைபடம்",
+    "paragraph_1": "உள்ளடக்க மாற்றத்தைக் காண மொழி பொத்தானைக் கிளிக் செய்க",
+    "project_name": "தரவு மற்றும் CrowdSourced SL",
+    "sample_para": "\nஇது ஒரு மாதிரி பத்தி",
+    "sample_para2": "\nஇது ஒரு மாதிரி பத்தி",
+    "stay_awhile_and_listen": "சிறிது நேரம் தங்கியிருந்து கேளுங்கள்",
+    "subHeader": "நாம் அந்தந்த ஆதாரங்களுடன் மைக்ரோ நிலை respensation மேம்படுத்த இலங்கையில் உள்ள covid 19 நோய் தொடர்பான மைக்ரோ நிலை தரவு சேகரிக்கப்பட்ட. எங்களுக்கு உதவி செய்யும் போது உங்கள் தரவு இயக்கப்படும் அறிவு தலைமுறை தரவைப் பெறுதல்.",
+    "test": "test",
+    "timeline": "நேரவரம்பு",
+    "timeline_topic": "கடந்த 45 நாட்களின் நிகழ்வுகள் மற்றும் சம்பவங்களின் காலவரிசை (கோவிட் 19 இலங்கை)",
+    "to_read": "எளிய வாழ்க்கை நபி முகம்மது “உயர் எண்ணங்கள் என் இதயம் அமைக்கிறது” என்றார். நம் வாழ்வில் எளிமை பின்பற்ற வேண்டிய அவசியம் உள்ளது. இன்றைய உலகில் அதிகரித்து வரும் ஆடம்பரமான மற்றும் நிகழ்ச்சி, எல்லோரும் அவரது செல்வத்தை காண்பிக்கும் எலி இனம் சேரும் போது, நாம் எந்த செயற்கை இல்லாமல், வெறுமனே வாழ விரும்புகிறார்கள். மகாத்மா காந்தியின் வாழ்க்கை வாழ்க்கையில் எளிமை எப்போதும் மனதில் முதிர்ச்சியை ஊக்குவிக்கிறது என்பதை நமக்குக் காட்டுகிறது. பல்வேறு சமூக சமய விழாக்களில் செல்வத்தை வீணாக்குவதற்குப் பதிலாக, நாம் ஒழுக்கமானவர்களாகவும், நிரூபிக்கமுடியாதவர்களாகவும் இருக்க வேண்டும். நல்ல மக்கள் அவர்கள் நல்ல என்று காட்ட தேவையில்லை. அதே முறையில், நம் வாழ்க்கை பாணியின் நுட்பமானது செல்வத்தின் மூல காட்சி இல்லை, அது நம் பாத்திரத்தில் தோன்றும் அல்லது நம்மை எடுத்துச்செல்லும் விதத்தில் தோன்றும். கடுமையாக உழைத்து மனிதகுலத்தின் சிறந்த ஊழியர்களாக இருக்கும் மக்கள், அமைதியான விளைவிக்கக்கூடிய முறையில் வாழ்கின்றனர். மில்லியன் கணக்கான மக்கள் வறுமைக் கோட்டிற்கு கீழே வாழ்ந்து வருகிறார்கள் என்பதை நாம் அறிந்திருக்கும்போது பணத்தை வீணடிக்க ஒரு பாவத்தை நாம் கருத்தில் கொள்ள வேண்டும். இப்போதெல்லாம், நுகர்வோர் கலாச்சாரத்தை அதிகரிப்பதில், எல்லாம் விற்பனையில் உள்ளது, நாம் மனித பண்புகளை பாதுகாக்க விரும்பினால் நாம் எளிய வாழ்க்கை முறையை கடைபிடிக்க வேண்டும்.",
+    "topic": "கடந்த 90 நாட்களுக்கு இடம் வாரியாக பாதிக்கப்பட்ட நோயாளி எண்ணிக்கை"
   }
 }
